--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ziyao Zhou: Personal site and portfolio</title>
-    <h1>Ziyao Zhou</h1>
-    <p>I'm a Junior in UCSD, majoring in Cognitive Science machine learning and Math-CS.</p>
 </head>
 <body>
-    
+    <h1>Ziyao Zhou</h1>
+    <p>I'm a Junior in UCSD, majoring in Cognitive Science machine learning and Math-CS.</p>
+    <img src = "images/Carrot_yonghao.jpg" alt = "Yonghao holding Carrot!">
+    <link rel= "stylesheet" href = "styles.css">
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="contact/index.html">contact</a>
+        <a href="projects/index.html">projects</a>
+        <a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a>
+        <a href="resume/index.html">resume</a>
+    </nav>
 </body>
 </html>
