--- a/contact/index.html
+++ b/contact/index.html
@@ -9,18 +9,18 @@
 <body>
     <nav>
         <a href="../index.html">Home</a> |
-        <a href="contact/index.html">contact</a>
+        <a href="index.html">contact</a>
         <a href="../projects/index.html">projects</a>
         <a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a>
         <a href="../resume/index.html">resume</a>
     </nav>
-    <form action = "mailto:ziz075@ucsd.edu" method = "POST" enctype = "text/plain">
+    <form action = "mailto:ziz075@ucsd.edu" method = "post" enctype = "text/plain">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email">
         <label for="subject">Subject:</label>
         <input type="text" id="subject" name="subject">
         <label for="body">Message:</label>
-        <textarea type="body" id="body" rows = "1"></textarea>
+        <textarea id="body" name="body" rows = "1"></textarea>
         <button type ="submit">Submit</button>
     </form>
 </body>
