--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="../index.html">Home</a> |
         <a href="../contact/index.html">contact</a>
-        <a href="../projects/index.html">projects</a>
+        <a href="index.html">projects</a>
         <a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a>
         <a href="../resume/index.html">resume</a>
     </nav>
