--- a/resume/index.html
+++ b/resume/index.html
@@ -100,7 +100,7 @@
         <a href="../contact/index.html">contact</a>
         <a href="../projects/index.html">projects</a>
         <a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a>
-        <a href="resume/index.html">resume</a>
+        <a href="index.html">resume</a>
     </nav>
 </body>
 </html>
