--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ziyao Zhou: Personal site and portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Ziyao Zhou</h1>
-    <p>I'm a Junior in UCSD, majoring in Cognitive Science machine learning and Math-CS.</p>
-    <img src = "images/Carrot_yonghao.jpg" alt = "Yonghao holding Carrot!">
-    <link rel= "stylesheet" href = "styles.css">
+    <title>Ziyao Zhou: Personal site and portfolio</title>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="contact/index.html">contact</a>
-        <a href="projects/index.html">projects</a>
-        <a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a>
-        <a href="resume/index.html">resume</a>
+        <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
+            <li><a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a></li>
+            <li><a href="resume/index.html">Resume</a></li>
+        </ul>
     </nav>
+    <h1>Ziyao Zhou</h1>
+    <img src="images/Carrot_yonghao.jpg" alt="Yonghao holding Carrot!">
+    <p>I am an undergraduate student at the University of California, San Diego, pursuing dual degrees in Cognitive Science with a focus on Machine Learning and Neural Science, and Mathematics-Computer Science, along with a minor in Data Science. I have a strong academic foundation with a 3.94 GPA and a skill set that includes programming, data analysis, machine learning, and web development. Beyond academics, I thrive in leadership roles, such as serving as the Head of the Human Resources Department for UCSD's Chinese Students and Scholars Association, where I organize large-scale events and manage communications for a diverse community. I am also passionate about building connections and supporting others, as demonstrated through my mentorship experience with newly admitted international students at UCSD.</p>
 </body>
 </html>
