--- a/resume/index.html
+++ b/resume/index.html
@@ -3,17 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Ziyao Zhou - Resume</title>
 </head>
-<body>
+<body class="resume-page">
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
+            <li><a href="../projects/index.html">Projects</a></li>
+            <li><a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a></li>
+            <li><a href="index.html" class="current">Resume</a></li>
+        </ul>
+    </nav>
+
     <h1>Resume</h1>
     <section id="contact-info">
-        <p>Ziyao Zhou</p >
-        <p>La Jolla, CA</p >
-        <p>Phone: (+1) 407-731-5608</p >
-        <p>Email: <a href=" ">ziz075@ucsd.edu</a ></p >
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/ziyao-zhou-2b602b295/" target="_blank">LinkedIn Profile</a ></p >
+        <div class="text-info">
+            <p><strong>Ziyao Zhou</strong></p>
+            <p>La Jolla, CA</p>
+            <p>Phone: (+1) 407-731-5608</p>
+            <p>Email: <a href=" ">ziz075@ucsd.edu</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/ziyao-zhou-2b602b295/" target="_blank">LinkedIn Profile</a></p>
+        </div>
+        <img src="../images/ziyaozhou.jpg" alt="Ziyao portfolio picture">
     </section>
+    
 
     <section id="education">
         <h2>Education</h2>
@@ -35,7 +50,7 @@
     </section>
 
     <section id="projects">
-        <h2>Selected Projects</h2>
+        <h2>Projects</h2>
         <article>
             <h3>The Simpsons Face Clustering and Mapping</h3>
             <p><a href="https://github.com/mmzhang7/The-Simpsons-PCA-Reconstruction" target="_blank">GitHub</a > | <a href="https://youtu.be/BJ8Am44SVe8" target="_blank">Slides</a ></p >
@@ -95,12 +110,5 @@
             </ul>
         </article>
     </section>
-    <nav>
-        <a href="../index.html">Home</a> |
-        <a href="../contact/index.html">contact</a>
-        <a href="../projects/index.html">projects</a>
-        <a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a>
-        <a href="index.html">resume</a>
-    </nav>
 </body>
 </html>
