--- a/projects/index.html
+++ b/projects/index.html
@@ -3,17 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projects</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
-    <h1>projects</h1>
+<body id="projects-page">
     <nav>
-        <a href="../index.html">Home</a> |
-        <a href="../contact/index.html">contact</a>
-        <a href="index.html">projects</a>
-        <a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a>
-        <a href="../resume/index.html">resume</a>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
+            <li><a href="index.html" class="current">Projects</a></li>
+            <li><a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a></li>
+            <li><a href="../resume/index.html">Resume</a></li>
+        </ul>
     </nav>
+    <title>projects</title>
+    <h1>projects</h1><div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa ipsam assumenda ipsum dolorem eius fugiat officia quo, necessitatibus velit tempore nam debitis repellat incidunt id hic maiores quis dolorum aperiam.</p>
+        </article>
+        <article>
+            <h2>Ad eum enim aliquid.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Ab sunt vel molestiae alias error ex autem a minus nam ea iusto adipisci eveniet veritatis et tempore perferendis incidunt ad quo sequi, aut nulla! Quo necessitatibus praesentium officiis commodi.</p>
+        </article>
+        <article>
+            <h2>In tempora ullam neque.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Autem, quam aperiam! Praesentium quasi dignissimos accusantium odit recusandae! Exercitationem facilis eaque aspernatur fugit dolores dignissimos a porro non beatae cum, debitis expedita ab soluta, eius voluptates architecto, voluptatum ea.</p>
+        </article>
+        <article>
+            <h2>Dolor aperiam et culpa!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Excepturi, recusandae maxime. Dignissimos debitis eveniet quos id placeat temporibus voluptatem aut amet quidem natus voluptate numquam laudantium itaque obcaecati accusamus esse molestiae quaerat, quisquam impedit? Necessitatibus adipisci repellendus libero.</p>
+        </article>
+        <article>
+            <h2>Obcaecati ad quibusdam minima.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aspernatur minima voluptates velit in libero fuga dicta reiciendis possimus vitae? Neque cum temporibus animi laboriosam voluptate ducimus rerum quis laborum quaerat? Voluptatibus alias recusandae eveniet voluptatum debitis doloribus itaque.</p>
+        </article>
+        <article>
+            <h2>Praesentium vitae iste sunt?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quo necessitatibus velit distinctio natus accusamus excepturi quidem magnam commodi, blanditiis aspernatur harum incidunt cumque neque optio molestias porro, perferendis quibusdam veritatis eum maiores. Iusto deleniti blanditiis deserunt perferendis eaque?</p>
+        </article>
+        <article>
+            <h2>Doloribus commodi repudiandae ut?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Blanditiis similique magnam consequuntur quaerat veritatis tempore exercitationem qui ratione, impedit sequi veniam odio harum velit! Sunt et quas exercitationem at possimus quibusdam soluta cupiditate repellat obcaecati, veniam enim numquam.</p>
+        </article>
+        <article>
+            <h2>Libero consequatur molestias repellat!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Ducimus possimus atque iste ea, vitae fugit? Explicabo alias error vel maiores dolor tempore sunt adipisci ab? Placeat, laboriosam ex? Vel nihil facilis harum assumenda animi optio, expedita eaque repellendus.</p>
+        </article>
+        <article>
+            <h2>Aliquid ad exercitationem corporis.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Mollitia, excepturi! Modi amet, error debitis fugiat excepturi tenetur eveniet recusandae, vitae odio, voluptate possimus facere voluptatum! Iure aliquid modi fugit expedita, libero atque dolorem dignissimos similique non minima debitis?</p>
+        </article>
+        <article>
+            <h2>Architecto corrupti expedita impedit!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Qui, ab? Perferendis ab numquam accusamus reprehenderit rem ipsa nobis, at minus placeat ullam voluptatem iusto saepe, illum quibusdam dignissimos eum amet vitae vel incidunt animi veniam. Velit, aliquam enim?</p>
+        </article>
+        <article>
+            <h2>Repellendus laborum illum impedit?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Asperiores fugit at numquam odio! Aut quidem sunt qui dolorem obcaecati officiis earum accusantium dolorum ipsa, assumenda voluptatum ipsam ex accusamus corrupti nesciunt odio illum porro natus suscipit rerum voluptas.</p>
+        </article>
+        <article>
+            <h2>Harum rem similique est.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Rem at assumenda fuga, vero exercitationem veniam officia porro ipsa! Neque magni nesciunt hic, cum explicabo debitis praesentium id iure consectetur! Optio sapiente ex nam in adipisci, corrupti dolores quam!</p>
+        </article>
+    </div>
+
 </body>
 </html>
 
