--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../styles.css">
+    <script type="module" src="../global.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -9,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="index.html" class="current">Contact</a></li>
+            <li><a href="index.html">Contact</a></li>
             <li><a href="../projects/index.html">Projects</a></li>
             <li><a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a></li>
             <li><a href="../resume/index.html">Resume</a></li>
