--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="global.js"></script>
 </head>
 <body>
     <title>Ziyao Zhou: Personal site and portfolio</title>
     <nav>
         <ul>
-            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="contact/index.html">Contact</a></li>
             <li><a href="projects/index.html">Projects</a></li>
             <li><a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a></li>
