--- a/projects/index.html
+++ b/projects/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
+    <script type="module" src="../global.js"></script>
 </head>
 <body id="projects-page">
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../contact/index.html">Contact</a></li>
-            <li><a href="index.html" class="current">Projects</a></li>
+            <li><a href="index.html">Projects</a></li>
             <li><a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a></li>
             <li><a href="../resume/index.html">Resume</a></li>
         </ul>
