--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
+    <script type="module" src="../global.js"></script>
     <title>Ziyao Zhou - Resume</title>
 </head>
 <body class="resume-page">
@@ -13,7 +14,7 @@
             <li><a href="../contact/index.html">Contact</a></li>
             <li><a href="../projects/index.html">Projects</a></li>
             <li><a href="https://github.com/ZiyaoZzz" target="_blank">GitHub</a></li>
-            <li><a href="index.html" class="current">Resume</a></li>
+            <li><a href="index.html">Resume</a></li>
         </ul>
     </nav>
 
