--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
 <body id="projects-page">
 
     <title>projects</title>
-    <h1>projects</h1><div class="projects">
+    <h1>Projects</h1><div class="projects">
         <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
