--- a/contact/index.html
+++ b/contact/index.html
@@ -9,10 +9,10 @@
 <body>
   
     <title>contact</title>
-    <h1>Contact</h1>
+    <h1>Contact me</h1>
     <form id="contact-form">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <!-- <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required> -->
         <label for="subject">Subject:</label>
         <input type="text" id="subject" name="subject" required>
         <label for="body">Message:</label>
