--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Ziyao Zhou: Personal site and portfolio</title>
 
     <h1>Ziyao Zhou</h1>
-    <img src="images/Carrot_yonghao.jpg" alt="Yonghao holding Carrot!">
+    <img src="images/mayday.jpg" alt="mayday Ashin!">
     <p>I am an undergraduate student at the University of California, San Diego, pursuing dual degrees in Cognitive Science with a focus on Machine Learning and Neural Science, and Mathematics-Computer Science, along with a minor in Data Science. I have a strong academic foundation with a 3.94 GPA and a skill set that includes programming, data analysis, machine learning, and web development. Beyond academics, I thrive in leadership roles, such as serving as the Head of the Human Resources Department for UCSD's Chinese Students and Scholars Association, where I organize large-scale events and manage communications for a diverse community. I am also passionate about building connections and supporting others, as demonstrated through my mentorship experience with newly admitted international students at UCSD.</p>
 </body>
 </html>
