--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" type="module" defer></script>
     <script type="module" src="global.js"></script>
 </head>
 <body>
     <title>Ziyao Zhou: Personal site and portfolio</title>
 
     <h1>Ziyao Zhou</h1>
-    <img src="images/mayday.jpg" alt="mayday Ashin!">
+    <img src="images/otter.jpg" alt="Otters are cute!">
     <p>I am an undergraduate student at the University of California, San Diego, pursuing dual degrees in Cognitive Science with a focus on Machine Learning and Neural Science, and Mathematics-Computer Science, along with a minor in Data Science. I have a strong academic foundation with a 3.94 GPA and a skill set that includes programming, data analysis, machine learning, and web development. Beyond academics, I thrive in leadership roles, such as serving as the Head of the Human Resources Department for UCSD's Chinese Students and Scholars Association, where I organize large-scale events and manage communications for a diverse community. I am also passionate about building connections and supporting others, as demonstrated through my mentorship experience with newly admitted international students at UCSD.</p>
 </body>
+
+
+<br></br>
+<h2>Latest Projects</h2>
+<div class="projects">
+    <!-- Dynamically added content will appear here -->
+</div>
+
+<h2>GitHub Profile Stats</h2>
+<div id="profile-stats">
+    <!-- The fetched data will be dynamically added here -->
+</div>
+
+<!-- Add the script to load index.js -->
+<script src="index.js" type="module" defer></script>
+
 </html>
