--- a/projects/index.html
+++ b/projects/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
+    <script src="../global.js" type="module"></script>
+    <script src="projects.js" type="module"></script>
 </head>
 <body id="projects-page">
 
     <title>projects</title>
-    <h1>Projects</h1><div class="projects">
-        <article>
+    <h1 class="projects-title">Projects</h1>
+    <div class="projects"></div>
+        <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa ipsam assumenda ipsum dolorem eius fugiat officia quo, necessitatibus velit tempore nam debitis repellat incidunt id hic maiores quis dolorum aperiam.</p>
@@ -69,8 +72,7 @@
             <h2>Harum rem similique est.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Rem at assumenda fuga, vero exercitationem veniam officia porro ipsa! Neque magni nesciunt hic, cum explicabo debitis praesentium id iure consectetur! Optio sapiente ex nam in adipisci, corrupti dolores quam!</p>
-        </article>
-    </div>
+        </article> -->
 
 </body>
 </html>
