--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" type="module" defer></script>
     <script type="module" src="global.js"></script>
+    <base href="/portfolio/">
 </head>
 <body>
     <title>Ziyao Zhou: Personal site and portfolio</title>
