--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="../global.js"></script>
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
+    <base href="/portfolio/">
 </head>
 <body id="projects-page">
 
