--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
     <title>Ziyao Zhou - Resume</title>
+    <base href="/portfolio/">
 </head>
 <body class="resume-page">
 
