--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <script type="module" src="../global.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/portfolio/">
+    <base href="/ZiyaoZhouPortfolio/">
 </head>
 <body>
   
