--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Base tag must be here -->
     <base href="/ZiyaoZhouPortfolio/">
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
