--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Base tag must be here -->
     <base href="/ZiyaoZhouPortfolio/">
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" type="module" defer></script>
