--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Base tag must be here -->
-    <base href="/ZiyaoZhouPortfolio/">
+    <!-- <base href="/ZiyaoZhouPortfolio/"> -->
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
     <meta charset="UTF-8">
