--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Base tag must be here -->
-    <base href="/ZiyaoZhouPortfolio/">
+    <!-- <base href="/ZiyaoZhouPortfolio/"> -->
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" type="module" defer></script>
     <script type="module" src="global.js"></script>
