--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
 <head>
     <!-- Base tag must be here -->
-    <!-- <base href="/ZiyaoZhouPortfolio/"> -->
+    <script>
+      (function () {
+          let base = document.createElement("base");
+          let isLocalhost = window.location.hostname === "127.0.0.1" || window.location.hostname === "localhost";
+  
+          // Set base href dynamically
+          base.href = isLocalhost ? "/" : "/ZiyaoZhouPortfolio/";
+  
+          console.log("Setting base href to:", base.href);
+          document.head.prepend(base);
+      })();
+    </script>
+  
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
     <meta charset="UTF-8">
