--- a/contact/index.html
+++ b/contact/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
     <!-- Base tag must be here -->
+    <!-- Dynamically set base URL -->
     <script>
-      (function () {
-          let base = document.createElement("base");
-          let isLocalhost = window.location.hostname === "127.0.0.1" || window.location.hostname === "localhost";
-  
-          // Set base href dynamically
-          base.href = isLocalhost ? "/" : "/ZiyaoZhouPortfolio/";
-  
-          console.log("Setting base href to:", base.href);
-          document.head.prepend(base);
-      })();
+      console.log("hostname: ", window.location.hostname);
+      // Set base URL dynamically based on hostname
+      if (
+          window.location.hostname === "127.0.0.1" ||
+          window.location.hostname === "localhost"
+      ) {
+          document.write('<base href="/">'); // Development environment
+      } else {
+          document.write('<base href="/portfolio/">'); // Production environment
+      }
+
+      const baseElement = document.querySelector("base");
+      console.log("Base URL:", baseElement.href);
     </script>
-  
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
     <meta charset="UTF-8">
