--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Base tag must be here -->
     <!-- Dynamically set base URL -->
     <script>
         console.log("hostname: ", window.location.hostname);
@@ -14,7 +13,7 @@
         ) {
             document.write('<base href="/">'); // Development environment
         } else {
-            document.write('<base href="/portfolio/">'); // Production environment
+            document.write('<base href="/ZiyaoZhouPortfolio/">'); // Production environment
         }
 
         const baseElement = document.querySelector("base");
