--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@
       ) {
           document.write('<base href="/">'); // Development environment
       } else {
-          document.write('<base href="/portfolio/">'); // Production environment
+          document.write('<base href="/ZiyaoZhouPortfolio/">'); // Production environment
       }
 
       const baseElement = document.querySelector("base");
