fixed the potential pages error

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Base tag must be here -->
     <!-- Dynamically set base URL -->
-    <script>
+    <!-- <script>
       console.log("hostname: ", window.location.hostname);
       // Set base URL dynamically based on hostname
       if (
@@ -17,7 +17,7 @@
 
       const baseElement = document.querySelector("base");
       console.log("Base URL:", baseElement.href);
-    </script>
+    </script> -->
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
     <meta charset="UTF-8">
