--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Base tag must be here -->
     <!-- Dynamically set base URL -->
-    <script>
+    <!-- <script>
         console.log("hostname: ", window.location.hostname);
         // Set base URL dynamically based on hostname
         if (
@@ -19,7 +19,7 @@
 
         const baseElement = document.querySelector("base");
         console.log("Base URL:", baseElement.href);
-    </script>
+    </script> -->
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" type="module" defer></script>
     <script type="module" src="global.js"></script>
