--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Dynamically set base URL -->
-    <script>
+    <!-- <script>
         console.log("hostname: ", window.location.hostname);
         // Set base URL dynamically based on hostname
         if (
@@ -18,79 +18,16 @@
 
         const baseElement = document.querySelector("base");
         console.log("Base URL:", baseElement.href);
-    </script>
+    </script> -->
     <link rel="stylesheet" href="../styles.css">
-    <script type="module" src="../global.js"></script>
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
 
 </head>
-<body id="projects-page">
-
+<body>
     <title>projects</title>
     <h1 class="projects-title">Projects</h1>
     <div class="projects"></div>
-        <!-- <article>
-            <h2>Lorem ipsum dolor sit.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa ipsam assumenda ipsum dolorem eius fugiat officia quo, necessitatibus velit tempore nam debitis repellat incidunt id hic maiores quis dolorum aperiam.</p>
-        </article>
-        <article>
-            <h2>Ad eum enim aliquid.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ab sunt vel molestiae alias error ex autem a minus nam ea iusto adipisci eveniet veritatis et tempore perferendis incidunt ad quo sequi, aut nulla! Quo necessitatibus praesentium officiis commodi.</p>
-        </article>
-        <article>
-            <h2>In tempora ullam neque.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Autem, quam aperiam! Praesentium quasi dignissimos accusantium odit recusandae! Exercitationem facilis eaque aspernatur fugit dolores dignissimos a porro non beatae cum, debitis expedita ab soluta, eius voluptates architecto, voluptatum ea.</p>
-        </article>
-        <article>
-            <h2>Dolor aperiam et culpa!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Excepturi, recusandae maxime. Dignissimos debitis eveniet quos id placeat temporibus voluptatem aut amet quidem natus voluptate numquam laudantium itaque obcaecati accusamus esse molestiae quaerat, quisquam impedit? Necessitatibus adipisci repellendus libero.</p>
-        </article>
-        <article>
-            <h2>Obcaecati ad quibusdam minima.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Aspernatur minima voluptates velit in libero fuga dicta reiciendis possimus vitae? Neque cum temporibus animi laboriosam voluptate ducimus rerum quis laborum quaerat? Voluptatibus alias recusandae eveniet voluptatum debitis doloribus itaque.</p>
-        </article>
-        <article>
-            <h2>Praesentium vitae iste sunt?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Quo necessitatibus velit distinctio natus accusamus excepturi quidem magnam commodi, blanditiis aspernatur harum incidunt cumque neque optio molestias porro, perferendis quibusdam veritatis eum maiores. Iusto deleniti blanditiis deserunt perferendis eaque?</p>
-        </article>
-        <article>
-            <h2>Doloribus commodi repudiandae ut?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Blanditiis similique magnam consequuntur quaerat veritatis tempore exercitationem qui ratione, impedit sequi veniam odio harum velit! Sunt et quas exercitationem at possimus quibusdam soluta cupiditate repellat obcaecati, veniam enim numquam.</p>
-        </article>
-        <article>
-            <h2>Libero consequatur molestias repellat!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ducimus possimus atque iste ea, vitae fugit? Explicabo alias error vel maiores dolor tempore sunt adipisci ab? Placeat, laboriosam ex? Vel nihil facilis harum assumenda animi optio, expedita eaque repellendus.</p>
-        </article>
-        <article>
-            <h2>Aliquid ad exercitationem corporis.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Mollitia, excepturi! Modi amet, error debitis fugiat excepturi tenetur eveniet recusandae, vitae odio, voluptate possimus facere voluptatum! Iure aliquid modi fugit expedita, libero atque dolorem dignissimos similique non minima debitis?</p>
-        </article>
-        <article>
-            <h2>Architecto corrupti expedita impedit!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Qui, ab? Perferendis ab numquam accusamus reprehenderit rem ipsa nobis, at minus placeat ullam voluptatem iusto saepe, illum quibusdam dignissimos eum amet vitae vel incidunt animi veniam. Velit, aliquam enim?</p>
-        </article>
-        <article>
-            <h2>Repellendus laborum illum impedit?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Asperiores fugit at numquam odio! Aut quidem sunt qui dolorem obcaecati officiis earum accusantium dolorum ipsa, assumenda voluptatum ipsam ex accusamus corrupti nesciunt odio illum porro natus suscipit rerum voluptas.</p>
-        </article>
-        <article>
-            <h2>Harum rem similique est.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Rem at assumenda fuga, vero exercitationem veniam officia porro ipsa! Neque magni nesciunt hic, cum explicabo debitis praesentium id iure consectetur! Optio sapiente ex nam in adipisci, corrupti dolores quam!</p>
-        </article> -->
-
 </body>
 </html>
 
