--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Dynamically set base URL -->
-    <script>
+    <!-- <script>
         console.log("hostname: ", window.location.hostname);
         // Set base URL dynamically based on hostname
         if (
@@ -18,7 +18,7 @@
 
         const baseElement = document.querySelector("base");
         console.log("Base URL:", baseElement.href);
-    </script>
+    </script> -->
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
     <title>Ziyao Zhou - Resume</title>
