--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/ZiyaoZhouPortfolio/">
     <!-- Base tag must be here -->
     <!-- Dynamically set base URL -->
     <!-- <script>
