--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         const baseElement = document.querySelector("base");
         console.log("Base URL:", baseElement.href);
     </script> -->
+    <base href="/ZiyaoZhouPortfolio/">
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" type="module" defer></script>
     <script type="module" src="global.js"></script>
