--- a/projects/index.html
+++ b/projects/index.html
@@ -19,6 +19,7 @@
         const baseElement = document.querySelector("base");
         console.log("Base URL:", baseElement.href);
     </script> -->
+    <base href="/ZiyaoZhouPortfolio/">
     <link rel="stylesheet" href="../styles.css">
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
