--- a/resume/index.html
+++ b/resume/index.html
@@ -19,6 +19,7 @@
         const baseElement = document.querySelector("base");
         console.log("Base URL:", baseElement.href);
     </script> -->
+    <base href="/ZiyaoZhouPortfolio/">
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
     <title>Ziyao Zhou - Resume</title>
