--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="/ZiyaoZhouPortfolio/">
+    <!-- <base href="/ZiyaoZhouPortfolio/"> -->
     <!-- Base tag must be here -->
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
