--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Dynamically set base URL -->
-    <base href="/ZiyaoZhouPortfolio/">
+    <!-- <base href="/ZiyaoZhouPortfolio/"> -->
     <link rel="stylesheet" href="../styles.css">
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
