--- a/projects/index.html
+++ b/projects/index.html
@@ -13,6 +13,17 @@
 <body>
     <title>projects</title>
     <h1 class="projects-title">Projects</h1>
+    <div class="container">
+        <svg id="projects-plot" viewBox="-50 -50 100 100"></svg>
+        <ul class="legend"></ul>
+    </div>
+    <input
+    class="searchBar"
+    type="search"
+    aria-label="Search projects"
+    placeholder="🔍 Search projects…"
+  />
+  
     <div class="projects"></div>
 </body>
 </html>
