--- a/meta/index.html
+++ b/meta/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
-    <script type="module" src="../global.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="../styles.css" />
+  <script type="module" src="../global.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="main.js"></script>
+  <title>Meta</title>
 </head>
 <body>
-    <title>Meta</title>
-    <h1>Meta</h1>
-    <p>Wabby Wabbo</p>
+  <h1>Meta</h1>
+  <p>Wabby Wabbo</p>
+
+  <h2>Summary</h2>
+  <div id="stats"></div>
+  <!-- Make sure there's NO extra </div> here -->
+
+  <h2>Commits by Time of Day</h2>
+  <div id="chart"></div>
+
+  <dl id="commit-tooltip" class="info tooltip" hidden>
+    <dt>Commit</dt>
+    <dd><a href="" id="commit-link" target="_blank"></a></dd>
+
+    <dt>Date</dt>
+    <dd id="commit-date"></dd>
+
+    <dt>Time</dt>
+    <dd id="commit-time"></dd>
+
+    <dt>Author</dt>
+    <dd id="commit-author"></dd>
+
+    <dt>Lines Edited</dt>
+    <dd id="commit-lines"></dd>
+  </dl>
+
+  <p id="selection-count">No commits selected</p>
+
+  <h2>Language Breakdown</h2>
+  <dl id="language-breakdown" class="stats"></dl>
 </body>
 </html>
