--- a/meta/index.html
+++ b/meta/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../styles.css" />
   <script type="module" src="../global.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <link rel="icon" href="../assets/smile.svg" type="image/svg+xml">
   <script src="main.js"></script>
   <title>Meta</title>
 </head>
