--- a/contact/index.html
+++ b/contact/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="../global.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/smile.svg" type="image/svg+xml">
 </head>
 <body>
   
