--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" type="module" defer></script>
     <script type="module" src="global.js"></script>
-
+    <link rel="icon" href="assets/smile.svg" type="image/svg+xml">
 </head>
 <body>
     <title>Ziyao Zhou: Personal site and portfolio</title>
