--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
-
+    <link rel="icon" href="../assets/smile.svg" type="image/svg+xml">
 </head>
 <body>
     <title>projects</title>
