--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
     <script type="module" src="../global.js"></script>
+    <link rel="icon" href="../assets/smile.svg" type="image/svg+xml">
     <title>Ziyao Zhou - Resume</title>
 </head>
 <body class="resume-page">
