--- a/projects/index.html
+++ b/projects/index.html
@@ -3,29 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Dynamically set base URL -->
-    <!-- <base href="/ZiyaoZhouPortfolio/"> -->
+    <title>Projects</title>
     <link rel="stylesheet" href="../styles.css">
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
     <link rel="icon" href="../assets/smile.svg" type="image/svg+xml">
 </head>
 <body>
-    <title>projects</title>
     <h1 class="projects-title">Projects</h1>
     <div class="container">
         <svg id="projects-plot" viewBox="-50 -50 100 100"></svg>
         <ul class="legend"></ul>
     </div>
     <input
-    class="searchBar"
-    type="search"
-    aria-label="Search projects"
-    placeholder="🔍 Search projects…"
-  />
-  
+        class="searchBar"
+        type="search"
+        aria-label="Search projects"
+        placeholder="🔍 Search projects…"
+    />
     <div class="projects"></div>
 </body>
 </html>
-
-
