--- a/resume/index.html
+++ b/resume/index.html
@@ -16,57 +16,63 @@
             <p><strong>Ziyao Zhou</strong></p>
             <p>La Jolla, CA</p>
             <p>Phone: (+1) 407-731-5608</p>
-            <p>Email: <a href=" ">ziz075@ucsd.edu</a></p>
+            <p>Email: <a href="mailto:ziz075@ucsd.edu">ziz075@ucsd.edu</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/ziyao-zhou-2b602b295/" target="_blank">LinkedIn Profile</a></p>
         </div>
         <img src="../images/ziyaozhou.jpg" alt="Ziyao portfolio picture">
     </section>
-    
 
     <section id="education">
         <h2>Education</h2>
-        <p><strong>University of California, San Diego (UCSD), San Diego, CA</strong></p >
-        <p>B.S. in Cognitive Science: Machine Learning and Neural Science, B.S. in Mathematics-Computer Science;</p >
-        <p>Minor in Data Science (Cumulative GPA: 3.94/4.0)</p >
-        <p>09/2022 - Present</p >
-        <p><strong>Instructional Apprenticeship (IA):</strong> Data Science in Practice (Fall 24)</p >
-        <p>Description: Hold weekly office hours, assist in discussion sessions, and grade class projects.</p >
+        <p><strong>University of California, San Diego (UCSD), San Diego, CA</strong></p>
+        <p>B.S. in Cognitive Science: Machine Learning and Neural Science, B.S. in Mathematics-Computer Science;</p>
+        <p>Minor in Data Science (Cumulative GPA: 3.94/4.0)</p>
+        <p>09/2022 - Present</p>
+        <p><strong>Instructional Apprenticeship (IA):</strong> Data Science in Practice (Fall 24)</p>
+        <p>Description: Hold weekly office hours, assist in discussion sessions, and grade class projects.</p>
     </section>
 
     <section id="skills">
         <h2>Technical Skills</h2>
         <ul>
-            <li><strong>Programming Languages:</strong> Python, SQL, Java, MATLAB, HTML, CSS</li>
+            <li><strong>Programming Languages:</strong> Python, Java, C, MATLAB, SQL, HTML, CSS, JavaScript</li>
             <li><strong>Libraries & Tools:</strong> NumPy, Pandas, Seaborn, Matplotlib</li>
             <li><strong>Skills:</strong> Data analysis, visualization, machine learning, experimental design, statistical analysis, web development</li>
         </ul>
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>Projects & Research</h2>
         <article>
-            <h3>The Simpsons Face Clustering and Mapping</h3>
-            <p><a href="https://github.com/mmzhang7/The-Simpsons-PCA-Reconstruction" target="_blank">GitHub</a > | <a href="https://youtu.be/BJ8Am44SVe8" target="_blank">Slides</a ></p >
+            <h3>UCSD Economics Research Lab</h3>
             <ul>
-                <li>Developed a pipeline to cluster Simpsons character faces and map third-party images at various angles using Python.</li>
-                <li>Applied PCA for image reconstruction, k-means for unsupervised learning, and SVM for classification.</li>
-                <li>Mapped top principal components to human faces, gaining insights through iterative experimentation.</li>
+                <li>Conducted data cleaning and categorization for research on economic history and social dynamics using Python.</li>
+                <li>Matched historical banking data, translated industry classifications, and performed web scraping.</li>
+                <li>Collaborated weekly to process and analyze large datasets for academic publication.</li>
             </ul>
         </article>
         <article>
-            <h3>Recipe Nutrition VS. Preparation Time & Steps Dataset Analysis</h3>
-            <p><a href="https://ziyaozzz.github.io/dsc80_project4_html/" target="_blank">Project Link</a ></p >
+            <h3>The Simpsons Face Clustering and Mapping</h3>
+            <p><a href="https://github.com/mmzhang7/The-Simpsons-PCA-Reconstruction" target="_blank">GitHub</a> | <a href="https://youtu.be/BJ8Am44SVe8" target="_blank">Slides</a></p>
             <ul>
-                <li>Analyzed correlations between movie budgets and revenues using Python.</li>
-                <li>Developed predictive models to identify patterns and visualized findings in an HTML website.</li>
+                <li>Clustered Simpsons character faces and mapped third-party images using PCA, k-means, and SVM.</li>
+                <li>Implemented image reconstruction and classification pipeline in Python.</li>
+            </ul>
+        </article>
+        <article>
+            <h3>Recipe Nutrition vs. Preparation Time & Steps Dataset Analysis</h3>
+            <p><a href="https://ziyaozzz.github.io/dsc80_project4_html/" target="_blank">Project Link</a></p>
+            <ul>
+                <li>Predicted recipe complexity from nutrition content and prep time using Python.</li>
+                <li>Visualized trends and shared insights on an HTML-based website.</li>
             </ul>
         </article>
         <article>
             <h3>California Airbnb Pricing and Potential Factors Analysis</h3>
-            <p><a href="https://github.com/COGS108/Group11_SP24/blob/master/FinalProject_group11.ipynb" target="_blank">GitHub</a ></p >
+            <p><a href="https://github.com/ZiyaoZzz/cogs108_project/blob/main/FinalProject_group11.ipynb" target="_blank">GitHub</a></p>
             <ul>
-                <li>Utilized Python (Pandas, NumPy, Matplotlib) for data analysis and visualization.</li>
-                <li>Applied statistical techniques to identify key factors influencing Airbnb pricing.</li>
+                <li>Used Python to analyze how beds, amenities, and ratings influence pricing.</li>
+                <li>Applied statistical methods and visualized data trends using Pandas and Matplotlib.</li>
             </ul>
         </article>
     </section>
@@ -75,10 +81,9 @@
         <h2>Work Experience</h2>
         <article>
             <h3>Food Service Worker, Department of Housing, Dining & Hospitality, UC San Diego</h3>
-            <p><time>Sep 2023 - Sep 2024</time></p >
+            <p><time>Sep 2023 - Sep 2024</time></p>
             <ul>
-                <li>Attended numerous UCSD events, familiar with professional event preparation and customer service procedures.</li>
-                <li>Acquired communication skills with clients and event attendees.</li>
+                <li>Worked UCSD events; practiced customer service, event setup, and communication.</li>
             </ul>
         </article>
     </section>
@@ -87,21 +92,21 @@
         <h2>Leadership Experience & Volunteers</h2>
         <article>
             <h3>Head of Human Resources Department, Chinese Students and Scholars Association, UCSD</h3>
-            <p><time>Sep 2022 - Present</time></p >
+            <p><time>Sep 2022 - Mar 2025</time></p>
             <ul>
-                <li>Organized Spring Festival Gala for 1400+ attendees, featuring celebrity guests.</li>
-                <li>Proficient in Excel data organization, and survey collection.</li>
-                <li>Managed CSSA WeChat agent accounts for 8,000+ contacts, dedicating 15 hours weekly.</li>
+                <li>Organized Spring Festival Gala (1400+ attendees) featuring Sunkis, P08, and Straight Fire Gang.</li>
+                <li>Led three years of student welcome and club fair events.</li>
+                <li>Managed WeChat agent accounts for 8,000+ contacts and cross-department coordination.</li>
             </ul>
         </article>
         <article>
             <h3>Peer Leader, International Students & Program Office, UCSD</h3>
-            <p><time>Jun 2023 - Sep 2023</time></p >
+            <p><time>Jun 2023 - Sep 2023</time></p>
             <ul>
-                <li>Conducted 1-on-1 mentoring for four newly admitted students.</li>
-                <li>Facilitated social and academic events to build cross-cultural community.</li>
+                <li>Mentored four new students through 1-on-1 sessions and community-building events.</li>
             </ul>
         </article>
     </section>
+
 </body>
 </html>
